src-tauri/crates/cc-router-tui/tests/snapshots/ui__subscriptions_list_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
assertion_line: 244
expression: "render(&mut subs_app(false), 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ 订阅 (3) ────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│      备注名               状态           厂商         sonnet                 │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (29, " "), (31, " "), (44, " "), (46, " ")]
"│ ▌ ●  智谱主号             正常           智谱         glm-4.6                │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (29, " "), (31, " "), (44, " "), (46, " ")]
"│   ◐  Kimi 备用            限流 · 00:42   Moonshot     (pending)              │" Hidden by multi-width symbols: [(13, " "), (15, " "), (29, " "), (31, " ")]
"│   ✕  示例中转             凭证失效       自定义中转   claude-sonnet-4-5      │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (29, " "), (31, " "), (33, " "), (35, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────────────────────────────────────────────────────────────── 1/3 ╯"
" 1-5 切页   ↑↓ 选择   ⏎ 详情   e 启停   t 测试   m 模型         ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (16, " "), (18, " "), (25, " "), (27, " "), (34, " "), (36, " "), (43, " "), (45, " "), (52, " "), (54, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
