src-tauri/crates/cc-router-tui/tests/snapshots/ui__wizard_basics_url_param_direct_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ───────────────────────────────────────────────────────── ⠯ 连接中 ╮" Hidden by multi-width symbols: [(73, " "), (75, " "), (77, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ 新建订阅 ────────────────────────────────────────── ① 基本信息 ── ② 绑定模型 ╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (57, " "), (59, " "), (61, " "), (63, " "), (71, " "), (73, " "), (75, " "), (77, " ")]
"│                                                                              │"
"│    厂商        Cloudflare                                            ⏎ 选择  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (74, " "), (76, " ")]
"│    接入点      direct                                                ⏎ 选择  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (74, " "), (76, " ")]
"│  ▌ 账户 ID     0123456789abcdef0123456789abcdef                              │" Hidden by multi-width symbols: [(6, " "), (8, " ")]
"│    API Key                                               Ctrl+R 显示 / 隐藏  │" Hidden by multi-width symbols: [(67, " "), (69, " "), (74, " "), (76, " ")]
"│    备注名      Cloudflare                                                    │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " ")]
"│                                                                              │"
"│                                  [ 下一步 ]                                  │" Hidden by multi-width symbols: [(38, " "), (40, " "), (42, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ 字段   ⏎ 下一项                                                    Esc 取消 " Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (18, " "), (76, " "), (78, " ")]
